--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@motionone/utils": "^10.18.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.15.0",
     "lenis": "^1.1.18",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.1.1",
     "react-scroll": "^1.9.0",
+    "react-type-animation": "^3.2.0",
     "tailwind-merge": "^2.6.0",
     "zustand": "^5.0.2"
   },
