--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lenis": "^1.1.18",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router": "^7.1.1",
     "react-scroll": "^1.9.0",
     "react-type-animation": "^3.2.0",
